fixed as recommended

--- a/src/styles/blocks.scss/about-us.scss
+++ b/src/styles/blocks.scss/about-us.scss
@@ -35,20 +35,20 @@
     @include onTable {
       justify-content: start;
     }
+  }
 
-    &-link {
-      margin-right: 30px;
-      text-decoration: none;
-      font-weight: 500;
-      font-size: 16px;
-      color: #687480;
-    }
+  &__exhibition-link {
+    margin-right: 30px;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 16px;
+    color: #687480;
+  }
 
-    &-date {
-      font-weight: 700;
-      font-size: 16px;
-      color: #1a5a4c;
-    }
+  &__exhibition-date {
+    font-weight: 700;
+    font-size: 16px;
+    color: #1a5a4c;
   }
 
   &__title {
