--- a/src/styles/blocks.scss/current-events.scss
+++ b/src/styles/blocks.scss/current-events.scss
@@ -38,24 +38,24 @@
     justify-content: space-between;
     margin-bottom: 15px;
 
-    &-link {
-      margin-right: 30px;
-
-      text-decoration: none;
-      font-weight: 500;
-      font-size: 16px;
-      color: #687480;
-    }
-
-    &-date {
-      font-weight: 700;
-      font-size: 16px;
-      color: #1a5a4c;
-    }
-
     @include onTable {
       justify-content: start;
     }
+  }
+
+  &__exhibition-link {
+    margin-right: 30px;
+
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 16px;
+    color: #687480;
+  }
+
+  &__exhibition-date {
+    font-weight: 700;
+    font-size: 16px;
+    color: #1a5a4c;
   }
 
   &__title {
