--- a/src/styles/blocks.scss/footer.scss
+++ b/src/styles/blocks.scss/footer.scss
@@ -53,21 +53,23 @@
 
   &__social {
     display: flex;
+  }
 
-    &-fb {
-      display: block;
-      background-image: url(../images/Facebook.svg);
-      width: 24px;
-      height: 24px;
-      margin-right: 25px;
+  &__social-fb {
+    display: block;
+    background-image: url(../images/Facebook.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 24px;
+    height: 24px;
+    margin-right: 25px;
 
-    }
-    &-instagram {
-      display: block;
-      background-image: url(../images/instagram.svg);
-      width: 24px;
-      height: 24px;
-    }
+  }
+  &__social-instagram {
+    display: block;
+    background-image: url(../images/instagram.svg);
+    width: 24px;
+    height: 24px;
   }
 
   &__schedule {
@@ -82,21 +84,23 @@
     @include onDesktop {
       grid-column: 3 / 5;
     }
+  }
 
-    &-list {
-      list-style: none;
-      padding: 20px 0;
-    }
+  &__schedule-list {
+    list-style: none;
+    padding: 20px 0;
+  }
 
-    &-time {
-      @include onTable {
-        display: inline;
-      }
-
-    }
-    &-day {
+  &__schedule-time {
+    font-weight: 700;
+    @include onTable {
       display: inline;
     }
+
+  }
+
+  &__schedule-day {
+    display: inline-block;
   }
 
   &__contacts {
@@ -109,11 +113,6 @@
 
     @include onDesktop {
       grid-column: 5 / 7;
-    }
-
-    &-item {
-      padding: 20px 0;
-      line-height: 150%;
     }
   }
 
@@ -136,15 +135,15 @@
       grid-column: 8 / 13;
       border-top: none;
     }
+  }
 
-    &-link {
-      text-decoration: none;
-      font-family: "IBM Plex Sans", sans-serif;
-      font-style: normal;
-      font-weight: 400;
-      font-size: 14px;
-      color: #0f0e08;
-    }
+  &__menu-link {
+    text-decoration: none;
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    color: #0f0e08;
   }
 
   &__copyright {
