--- a/src/styles/blocks.scss/gallery_desktop.scss
+++ b/src/styles/blocks.scss/gallery_desktop.scss
@@ -4,9 +4,11 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     gap: 30px;
+
   }
 
-  &__foto {
+  &__photo {
+    overflow: hidden;
     &--one {
       grid-column: 1 / 5;
 
@@ -22,6 +24,14 @@
     &--four {
       grid-column: 9 / 13;
 
+    }
+  }
+
+  &__photo-item {
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(120%);
     }
   }
 }
