--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,3 +16,4 @@
 @import "./blocks.scss/subscription.scss";
 @import "./blocks.scss/footer.scss";
 @import "./blocks.scss/buton-up.scss";
+@import "./blocks.scss/contacts.scss";
