--- a/src/styles/blocks.scss/gallery_phone.scss
+++ b/src/styles/blocks.scss/gallery_phone.scss
@@ -24,18 +24,25 @@
     justify-content: center;
     width: 100%;
     height: 100%;
+    overflow: hidden;
+  }
 
-    &-item {
-      box-sizing: border-box;
-      display: block;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      background-position: center;
+  &__photo-item {
+    box-sizing: border-box;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    background-position: center;
+    transition: transform, 0.3s;
 
-      @include onTable {
-        border: 10px solid #fff;
-      }
+    @include onTable {
+      border: 10px solid #fff;
+    }
+
+    &:hover {
+      position: relative;
+      transform: scale(120%);
     }
   }
 
