--- a/src/styles/blocks.scss/menu.scss
+++ b/src/styles/blocks.scss/menu.scss
@@ -1,6 +1,7 @@
 .menu {
   box-sizing: border-box;
-  background-color: rgba(255, 255, 255, 0.7);
+  background: linear-gradient(90deg, rgba(255, 255, 255, 1),
+  rgba(255, 255, 255, 0.8));
 
   &__top {
     @include header-top;
