--- a/src/styles/block/footer.scss
+++ b/src/styles/block/footer.scss
@@ -47,6 +47,11 @@
   }
 
   &__text-slot {
+
+    @include onTablet {
+      display: flex;
+      gap: 5px;
+    }
     &--last {
       padding-top: 20px;
     }
@@ -55,7 +60,8 @@
   &__text-title,
   &__text-day,
   &__text-time,
-  &__nav-link {
+  &__nav-link,
+  &__link {
     font-weight: 400;
     font-size: 14px;
     line-height: 140.62%;
@@ -64,6 +70,12 @@
 
   &__text-time {
     font-weight: 600;
+  }
+
+  &__link {
+    &:hover {
+      color: #f14a27;
+    }
   }
 
   &__nav {
@@ -96,6 +108,9 @@
   &__nav-link {
     line-height: 100%;
 
+    &:hover {
+      color: #f14a27;
+    }
   }
 
   &__go-top {
