--- a/src/styles/block/gallery.scss
+++ b/src/styles/block/gallery.scss
@@ -24,6 +24,7 @@
   }
 
   &__image {
+    transition: transform 0.3s;
 
     @include onTablet {
       grid-column: 1 / 4;
@@ -78,16 +79,20 @@
         width: 100%;
       }
     }
+
+    &:hover {
+      transform: scale(1.05);
+    }
   }
 
   &__image-mobile {
+    transition: transform 0.3s;
     width: 100%;
     height: 100%;
-  }
 
-  &__slider {
-    @include onTablet {
-      grid-column: 3 / 5;
+    &:hover {
+      transform: scale(1.03);
     }
   }
+
 }
