--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,13 +3,12 @@
 @import "./utils/mixins";
 @import "./utils/extends";
 
-@import "./block/grid.scss";
+@import "./block/menu.scss";
 @import "./block/page.scss";
 @import "./block/header.scss";
 @import "./block/events.scss";
 @import "./block/lecture.scss";
 @import "./block/gallery.scss";
 @import "./block/swiper.scss";
-@import "./block/slider.scss";
 @import "./block/subscription.scss";
 @import "./block/footer.scss";
