--- a/src/styles/block/page.scss
+++ b/src/styles/block/page.scss
@@ -8,6 +8,23 @@
 
   scroll-behavior: smooth;
 
+  &__body--with-menu {
+    overflow: hidden;
+  }
+
+  &__menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    transform: translateX(-100%);
+    transition: transform 0.3s;
+
+    &:target {
+      transform: translateX(0);
+    }
+  }
+
   &__main {
     padding-left: 20px;
     padding-right: 20px;
