--- a/src/styles/block/subscription.scss
+++ b/src/styles/block/subscription.scss
@@ -18,7 +18,6 @@
 
   &__content {
     display: grid;
-    // place-items: center;
     place-content: center;
     padding-top: 88px;
     padding-bottom: 88px;
@@ -111,19 +110,14 @@
       flex-basis: 15%;
     }
 
+    &:hover {
+      background-color: rgb(26, 90, 76);
+      color: #fff;
+    }
+
     &:focus {
       outline-color: #f14a27;
     }
-  }
-
-  &__link {
-    z-index: 0;
-    display: flex;
-    // height: 100%;
-    // width: 100%;
-    justify-content: center;
-    align-items: center;
-    color: #000;
   }
 
 }
