add target attribute and fix scrolling under the menu

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,7 +2,13 @@
   scroll-behavior: smooth;
   &__body {
     margin: 0;
+    
+    &--with-menu {
+      overflow: hidden;
+    }
   }
+
+
   &__section {
     &:nth-child(2) {
       margin-bottom: 150px;
