--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,10 @@ body {
   }
 }
 
+.body__menu-on {
+  overflow: hidden;
+}
+
 .container {
   max-width: 1280px;
   padding: 0 20px;
@@ -195,5 +199,60 @@ body {
     width: 12px;
     height: 12px;
     background: url("../images/arrow-w.svg") center/contain no-repeat;
+  }
+}
+
+.nav-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: $c-gray;
+  height: 100vh;
+  width: 100%;
+
+  box-shadow: 0 0 10px $c-text;
+
+  transform: translate(-100%, -100%);
+  transition: transform 0.7s ease-in-out;
+
+  &:target {
+    transform: translate(0);
+  }
+
+  &__wrap {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding-top: 9px;
+
+    @include onTablet {
+      padding-top: 15px;
+    }
+  }
+}
+
+.nav-list {
+  border-radius: 4px;
+  margin-top: 20px;
+
+  &__item {
+    margin-bottom: 20px;
+  }
+
+  &__link {
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 34px;
+    color: $c-text;
+    border-bottom: 2px solid rgba(0, 0, 0, 0);
+    padding-bottom: 10px;
+    transition: border-bottom-color 0.3s linear;
+    display: inline-block;
+
+    &:hover {
+      border-bottom: 2px solid $c-text;
+    }
   }
 }
