--- a/src/styles/blocks/actual.scss
+++ b/src/styles/blocks/actual.scss
@@ -68,25 +68,23 @@
 
   &__card-last {
     margin: 0 -20px;
-    padding: 0 20px;
-    display: flex;
-    height: 210px;
-    background-image: url("../images/3.jpg");
-    background-size: cover;
-    align-items: end;
+  }
+
+  &__img--last {
+    margin: 0;
   }
 
   &__card-frame {
     padding-top: 20px;
+    margin: 0 20px;
     position: relative;
-    bottom: -70px;
+    bottom: 60px;
     display: grid;
     grid-template-areas:
     'actual__type--last  actual__date--last'
     'actual__title--last actual__title--last';
 
     grid-template-columns: min-content;
-    grid-template-rows: min-content;
 
     background-color: #fff;
     box-shadow: 0px 2px 0px 0px #1a5a4c40;
@@ -94,22 +92,17 @@
 
   &__type--last {
     grid-area: actual__type--last;
-    margin-left: 21px;
-    grid-column: 1 / 2;
+    margin-left: 20px;
   }
 
   &__date--last {
     grid-area: actual__date--last;
-    grid-column: 2 / -1;
-    margin-right: 21px;
+    margin-right: 20px;
   }
 
   &__title--last {
     grid-area: actual__title--last;
-    grid-column: 1 / -1;
-    margin-top: 20px;
-    color: #0f0e08;
-
+    margin: 20px 0;
     text-align: center;
 
     &::after {
