--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,3 +15,7 @@
 @import "blocks/subscribe.scss";
 @import "blocks/gallery.scss";
 @import "blocks/footer.scss";
+
+:root {
+  scroll-behavior: smooth;
+}
