--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -24,8 +24,10 @@
       font-size: 48px;
     }
   }
-  &__picture {
-    width: 100%;
-    height: 100%;
+  &__block-picture {
+    display: none;
+    @include onDesktop {
+      display: grid;
+    }
   }
 }
