--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -1,4 +1,26 @@
 .swiper {
-  max-width: 500px;
-  max-height: 600px;
+  width: 100%;
+  height: 100%;
+  &__picture {
+    min-width: 280px;
+  }
+  @include onTablet {
+    padding: 20px;
+  }
+  @include onDesktop {
+    display: none;
+  }
+}
+
+.swiper-slide {
+  display: flex;
+  flex-wrap: wrap;
+  overflow: hidden;
+  justify-content: center;
+  align-self: center;
+
+}
+
+.swiper-pagination {
+  margin-top: 50px;
 }
