--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,13 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./reset.scss";
+@import "./utils/_vars.scss";
+@import "./mixins.scss";
+@import "./bloks/grid.scss";
 
-body {
-  background: $c-gray;
-}
+@import "./bloks/icon.scss";
+@import "./bloks/page.scss";
+@import "./bloks/header.scss";
+@import "./bloks/footer.scss";
+
+@import "./bloks/ticket.scss";
+
+@import "./bloks/container.scss";
