--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -6,9 +6,11 @@
   grid-auto-flow: column;
 
   grid-template-areas:
-  'header  header'
-  'tickets tickets'
-  'actual  actual';
+  'header    header'
+  'tickets   tickets'
+  'actual    actual'
+  'gallery   gallery'
+  'subscribe subscribe';
 
   gap: 0 20px;
 
