--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,5 @@
 @import "blocks/header";
 @import "blocks/tickets";
 @import "blocks/actual";
+@import "blocks/gallery";
+@import "blocks/subscribe";
