--- a/src/styles/blocks/actual.scss
+++ b/src/styles/blocks/actual.scss
@@ -1,6 +1,6 @@
 .actual {
   padding: 0 var(--padding-h);
-  margin: 70px 0 0;
+  margin-top: var(--margin-top-sections);
   grid-area: actual;
 
   &__card {
@@ -22,8 +22,6 @@
     margin-bottom: 20px;
     grid-area: actual__img;
   }
-
-
 
   &__type {
     grid-area: actual__type;
@@ -103,6 +101,7 @@
   &__title--last {
     grid-area: actual__title--last;
     margin: 20px 0;
+    place-self: center;
     text-align: center;
 
     &::after {
