--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -4,7 +4,7 @@
 
   height: 300px;
 
-  background-image: url(../images/header.jpg);
+  background-image: url("../images/header.jpg");
   background-size: cover;
 
   @include onTablet {
