--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,9 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/sections.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/subscribe.scss";
+@import "./blocks/gallery.scss";
