--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -14,6 +14,7 @@
   &__title {
     color: #fff;
     margin-bottom: 20px;
+    text-transform: unset;
   }
 
   &__description {
@@ -24,18 +25,40 @@
   }
 
   &__form {
-
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
   }
 
   &__email {
+    width: 230px;
+    height: 50px;
+    border: 0;
+    padding: 18px 24px;
+    outline: 0;
+    @extend %p--email;
+    color: black;
 
+    &::placeholder {
+      @extend %p--email;
+    }
   }
 
   &__submit-label {
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    width: 50px;
+    background-color: #f14a27;
   }
 
   &__submit {
+    display: none;
+  }
 
+  &__img {
+    width: 7.41px;
+    height: 12px;
   }
 }
