--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -35,3 +35,10 @@
     font-size: 36px;
   }
 }
+
+%p--email {
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1;
+}
