Add changes to form submit, menu color

--- a/src/styles/block/menu.scss
+++ b/src/styles/block/menu.scss
@@ -53,7 +53,7 @@
 
   &__link {
     font-family: "Montserrat", sans-serif;
-    color: #0f0e08;
+    color: #fff;
     font-weight: 700;
     font-size: 22px;
     line-height: 22px;
@@ -79,7 +79,7 @@
     font-size: 16px;
     line-height: 27px;
     text-transform: uppercase;
-    color: #292929;
+    color: #fff;
 
     &--phone {
       margin-bottom: 16px;
@@ -95,7 +95,7 @@
       letter-spacing: 2px;
 
       padding-bottom: 8px;
-      border-bottom: 1px solid #292929;
+      border-bottom: 1px solid #fff;
 
       &:hover {
         color: #f14a27;
