--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -75,13 +75,23 @@
     line-height: 150%;
     margin-bottom: 20px;
     width: 130px;
+    text-decoration: none;
+    color: #0f0e08;
+
     @include onTablet {
       min-width: 210px;
     }
     @include onDesktop {
       width: 170px;
     }
+  }
+  &__text-hover {
+    border-bottom: 1px solid transparent;
+    transition: border-color 0.3s;
 
+    &:hover {
+      border-color: #0f0e08;
+    }
   }
   &__text-second {
     width: 130px;
