--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -99,4 +99,31 @@
       line-height: 120%;
     }
   }
+  &__events {
+    position: absolute;
+    bottom: 140px;
+    margin-right: 250px;
+    margin-bottom: 150px;
+    transform: rotate(-90deg);
+    font-family: "IBM Plex Sans", sans-serif;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 100%;
+    color: #687480;
+    display: none;
+
+    &::before {
+      content: "";
+      position: absolute;
+      width: 1px;
+      height: 70px;
+      background-color: #1a5a4c;
+      transform: rotate(-90deg);
+      top: -26px;
+      right: 96px;
+    }
+    @include onDesktop {
+      display: block;
+    }
+  }
 }
