--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -3,13 +3,14 @@
 
   height: 100vh;
   padding: 18px 0;
-  overflow-y: hidden;
   z-index: 1;
+  overflow-y: auto;
 
   &__top {
     margin-bottom: 80px;
 
     @include onTablet {
+
       margin-bottom: 100px;
     }
     @include onDesktop {
@@ -45,6 +46,7 @@
       border-color: rgb(158, 149, 149);
     }
   }
+
   &__contacts {
     display: block;
     text-decoration: none;
@@ -54,6 +56,9 @@
     color: rgb(158, 149, 149);
     padding-bottom: 15px;
     margin-left: 20px;
-
+    transition: color 0.3s;
+    &:hover {
+      color: rgb(90, 89, 89);
+    }
   }
 }
