--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -39,6 +39,11 @@
     width: 50px;
     height: 50px;
     background-color: #1a5a4c;
+    transition: background-color 0.3s;
+
+    &:hover {
+      background-color: #009474;
+    }
 
     @include onTablet {
       width: 70px;
