--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -30,4 +30,16 @@
       display: grid;
     }
   }
+
+  &__picture {
+    transition: transform 0.3s,
+      box-shadow 0.3s,
+      border-radius 0.3s;
+
+    &:hover {
+      box-shadow: 0 13px 37px rgba(22, 21, 21, 0.35);
+      transform: scale(1.05);
+      border-radius: 10px;
+    }
+  }
 }
