--- a/src/styles/blocks/special-event.scss
+++ b/src/styles/blocks/special-event.scss
@@ -4,6 +4,15 @@
     margin-left: -20px;
     width: 320px;
     height: 210px;
+    transition: transform 0.3s,
+      box-shadow 0.3s,
+      border-radius 0.3s;
+
+    &:hover {
+      box-shadow: 0 13px 37px rgba(22, 21, 21, 0.35);
+      transform: scale(1.05);
+      border-radius: 10px;
+    }
 
     @include onTablet {
       margin-left: 0;
