--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,8 @@
 @import "./blocks/reset.scss";
 @import "./blocks/normalize.scss";
 @import "./blocks/mixines.scss";
+@import "./blocks/variables.scss";
 
 @import "./blocks/header.scss";
+@import "./blocks/content.scss";
+@import "./blocks/footer.scss";
