--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -79,7 +79,7 @@
     }
 
     @include onDesktop {
-      width: 725px;
+      width: 100%;
       height: 655px;
 
       margin-bottom: 200px;
@@ -87,6 +87,7 @@
   }
 
   &__nav {
+    width: 100%;
     &--content {
       font-family: "Montserrat", sans-serif;
       font-style: normal;
