footer demo phone

--- a/src/styles/bloks/container.scss
+++ b/src/styles/bloks/container.scss
@@ -1,5 +1,5 @@
 .container {
-  position:relative;
+  position: relative;
   box-sizing: border-box;
   max-width: 1280px;
   margin: 0 auto;
@@ -8,6 +8,7 @@
     @include onPhone {
       display: flex;
       flex-direction: column-reverse;
+      column-gap: 0;
     }
   }
 }
