--- a/src/styles/bloks/footer.scss
+++ b/src/styles/bloks/footer.scss
@@ -3,10 +3,60 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+    font-family: $ff-IBM;
+    @include onTablet {
+      flex-direction: column;
+    }
+
+    @include onDesktop {
+      flex-direction: column;
+    }
+
+  }
+
+  &__link {
+    color: #0f0f08;
   }
 
   &__logo {
     height: 72px;
     width: 62px;
   }
+
+  &__schedule {
+
+  }
+
+  &__schedule-content {
+
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+  }
+
+  &__info {
+  position: relative;
+  margin-bottom: 71px;
+  
+    &::after {
+      position: absolute;
+      content: '';
+      height: 1px;
+      width: 100%;
+      background-color: rgba(26, 90, 76, 0.5);
+    }
+  }
+
+  &__contacts-content {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+  }
+
+  &__arrow-up {
+    position:absolute;
+    right: 20px;
+  }
 }
+
