--- a/src/styles/bloks/grid.scss
+++ b/src/styles/bloks/grid.scss
@@ -9,7 +9,7 @@
 
   @include onPhone {
     grid-template-columns: repeat(2, 1fr);
-
+    column-gap: 0;
   }
 
   &__item {
@@ -40,5 +40,16 @@
         }
       }
     }
+  }
+
+  &__reset {
+    @include onTablet {
+      display: flex;
+    }
+
+    @include onDesktop {
+      display: flex;
+    }
+
   }
 }
