--- a/src/styles/bloks/page.scss
+++ b/src/styles/bloks/page.scss
@@ -2,12 +2,13 @@
   &__body {
     box-sizing: border-box;
     font-family: $ff-IBM;
+    color: #0f0f08;
+
   }
 
   &__section {
 
     margin-bottom: 200px;
-    margin-left: 55px;
 
     @include onTablet {
       margin-left: 34px;
@@ -39,7 +40,6 @@
 
   &__title {
     margin-top: 20;
-    align-self: flex-start;
     align-self: center;
     text-align: center;
 
@@ -51,5 +51,17 @@
       margin-top: 204px;
     }
 
+  }
+
+  &__footer {
+    margin: 0 20px;
+
+    @include onTablet {
+      display: flex;
+    }
+
+    @include onDesktop {
+      display: flex;
+    }
   }
 }
