--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,4 +1,4 @@
 $c-gray: #eee;
 
-$ff-IBM: 'IBM Plex Sans', sans-serif;
-$ff-Montserrat: 'Montserrat', sans-serif;
+$ff-IBM: "IBM Plex Sans", sans-serif;
+$ff-Montserrat: "Montserrat", sans-serif;
