--- a/src/styles/bloks/ticket.scss
+++ b/src/styles/bloks/ticket.scss
@@ -1,57 +1,57 @@
 .ticket {
   &__frame {
-      display: flex;
-      flex-direction: row;
-      justify-content:space-between;
+    display: flex;
+    flex-direction: row;
+    // justify-content: space-between;
+    width: 100%;
+    height: 50px;
+    border: 1px solid #1a5a4c;
+
+    @include onTablet {
+      width: 270px;
+      height: 70px;
+    }
+    @include onDesktop {
+      width: 270px;
+      height: 70px;
+    }
+  }
+
+  &__title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: $ff-IBM;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    color: #0f0e08;
+    width: 100%;
+
+    @include onTablet {
       width: 100%;
-      height: 50px;
-      border: 1px solid #1a5a4c;
-
-      @include onTablet{
-        width: 270px;
-        height: 70px;
-      }
-      @include onDesktop {
-        width: 270px;
-        height: 70px;
-      }
     }
 
-    &__title {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: $ff-IBM;
-      font-style: normal;
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 100%;
+    @include onDesktop {
+      width: 100%;
+    }
+  }
 
-      color: #0F0E08;
+  &__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    border-left: 1px solid #1a5a4c;
+    background-color: #1a5a4c;
 
-      @include onTablet {
-          width: 100%;
-        }
-
-      @include onDesktop {
-        width: 100%;
-      }
+    @include onTablet {
+      width: 85px;
     }
 
-    &__button {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 50px;
-      border-left: 1px solid #1a5a4c;
-      background-color: #1a5a4c;
-
-      @include onTablet {
-          width: 85px;
-        }
-
-      @include onDesktop {
-       width: 85px;
-      }
+    @include onDesktop {
+      width: 85px;
     }
+  }
 }
