--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -35,12 +35,15 @@ h3 {
 }
 
 h4 {
-  z-index: 1;
   @extend %h1;
   font-size: 28px;
   font-weight: 400;
   text-align: left;
   text-transform: unset;
+}
+
+h5 {
+  @extend %h5;
 }
 
 p {
