--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -10,7 +10,8 @@
   'tickets   tickets'
   'actual    actual'
   'gallery   gallery'
-  'subscribe subscribe';
+  'subscribe subscribe'
+  'contacts  contacts';
 
   gap: 0 20px;
 
@@ -18,15 +19,20 @@
     grid-template-columns: repeat(6, 1fr);
     gap: 0 30px;
     grid-template-areas:
-    'tickets tickets tickets header header header'
-    'actual  actual  actual  actual actual actual';
+    'tickets    tickets    tickets    header     header     header'
+    'actual     actual     actual     actual     actual     actual'
+    'gallery    gallery    gallery    gallery    gallery    gallery'
+    'subscribe  subscribe  subscribe  subscribe  subscribe  subscribe'
+    'contacts   contacts   contacts   contacts   contacts   contacts';
   }
 
   @include onPC {
     grid-template-columns: repeat(12, 1fr);
     grid-template-areas:
-    'tickets tickets tickets tickets tickets header header header header header header header'
-    'actual  actual  actual  actual  actual  actual actual actual actual actual actual actual';
+    'tickets    tickets    tickets    tickets    tickets    header     header     header     header     header     header     header'
+    'actual     actual     actual     actual     actual     actual     actual     actual     actual     actual     actual     actual'
+    'gallery    gallery    gallery    gallery    gallery    gallery    gallery    gallery    gallery    gallery    gallery    gallery'
+    'subscribe  subscribe  subscribe  subscribe  subscribe  subscribe  subscribe  subscribe  subscribe  subscribe  subscribe  subscribe'
+    'contacts   contacts   contacts   contacts   contacts   contacts   contacts   contacts   contacts   contacts   contacts   contacts';
   }
 }
-
