--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -8,6 +8,14 @@
   text-transform: uppercase;
 }
 
+%h5 {
+  font-family: IBM Plex Sans;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.4;
+  color: #0f0e08;
+}
+
 %p {
   margin: 0;
   font-family: IBM Plex Sans;
