--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -9,12 +9,10 @@ h2 {
   text-align: center;
 
   @include onTablet {
-    font-size: 54px;
     text-align: left;
   }
 
   @include onPC {
-    font-size: 72px;
     text-align: left;
   }
 }
@@ -27,16 +25,20 @@ h3 {
 
   @include onTablet {
     font-size: 48px;
+    margin-bottom: 48px;
+    text-align: left;
   }
 
   @include onPC {
     font-size: 48px;
+    margin-bottom: 56px;
+    text-align: left;
   }
 }
 
 h4 {
   @extend %h1;
-  font-size: 28px;
+  font-size: var(--h4-font-size);
   font-weight: 400;
   text-align: left;
   text-transform: unset;
