--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -28,6 +28,7 @@
 
   @include onPC {
     grid-template-columns: repeat(12, 1fr);
+    gap: 0 30px;
     grid-template-areas:
     'tickets    tickets    tickets    tickets    tickets    header     header     header     header     header     header     header'
     'actual     actual     actual     actual     actual     actual     actual     actual     actual     actual     actual     actual'
