--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -11,10 +11,21 @@
   background-size: cover;
   background-position: center;
 
+  @include onTablet {
+    height: 380px;
+  }
+
+  @include onPC {
+    height: 550px;
+  }
+
+
+
   &__title {
     color: #fff;
     margin-bottom: 20px;
     text-transform: unset;
+    text-align: center;
   }
 
   &__description {
@@ -39,6 +50,20 @@
     @extend %p--email;
     color: black;
 
+    @include onTablet {
+      width: 374px;
+      height: 70px;
+      margin-right: 16px;
+    }
+
+    @include onPC {
+      width: 470px;
+      height: 70px;
+      margin-right: 30px;
+    }
+
+
+
     &::placeholder {
       @extend %p--email;
     }
@@ -52,6 +77,18 @@
     width: 50px;
     background-color: #f14a27;
     cursor: pointer;
+
+    @include onTablet {
+      height: 70px;
+      width: 70px;
+    }
+
+    @include onPC {
+      height: 70px;
+      width: 70px;
+    }
+
+
   }
 
   &__submit {
