--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -8,21 +8,33 @@
 
   --h1-font-size: 30px;
   --h2-font-size: 45px;
+  --h4-font-size: 28px;
+  --actual__title-margin: 10px 0;
 
   @include onTablet {
     --padding-v: 15px;
     --padding-h: 34px;
 
+    --margin-top-sections: 88px;
+
     --h1-font-size: 36px;
     --h2-font-size: 54px;
+    --h4-font-size: 36px;
+    --actual__title-margin-t: 30px;
+    --actual__title-margin-b: 15px;
   }
 
   @include onPC {
     --padding-v: 15px;
     --padding-h: 55px;
 
+    --margin-top-sections: 200px;
+
     --h1-font-size: 36px;
     --h2-font-size: 72px;
+    --h4-font-size: 36px;
+    --actual__title-margin-t: 30px;
+    --actual__title-margin-b: 15px;
   }
 }
 
