--- a/src/styles/blocks/content.scss
+++ b/src/styles/blocks/content.scss
@@ -26,41 +26,7 @@
       gap: 50px;
     }
 
-    &-foto1 {
-      width: 270px;
-      height: 500px;
-      margin-left: 20px;
-      transition: transform 0.8s;
-
-      &:hover {
-        transform: scale(1.2);
-      }
-    }
-
-    &-foto2 {
-      width: 670px;
-      height: 500px;
-      transition: transform 0.8s;
-
-      &:hover {
-        transform: scale(1.2);
-      }
-    }
-
-    &-foto3 {
-      width: 670px;
-      height: 260px;
-      margin-left: 20px;
-      transition: transform 0.8s;
-
-      &:hover {
-        transform: scale(1.2);
-      }
-    }
-
-    &-foto4 {
-      width: 270px;
-      height: 260px;
+    &-foto {
       transition: transform 0.8s;
 
       &:hover {
@@ -186,7 +152,6 @@
     }
 
     &--memoriesAndDreams {
-      display: flex;
       position: relative;
 
       &-photo {
@@ -312,7 +277,7 @@
       position: absolute;
 
       top: 80%;
-
+      left: 6%;
       width: 280px;
       height: 140px;
       background-color: $colorWhite;
@@ -327,7 +292,7 @@
       }
 
       @include onDesktop {
-        left: 270px;
+        left: 340px;
       }
 
       &-links {
