--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  position: relative;
   @include onDesktop {
     display: flex;
     position: relative;
@@ -112,7 +113,7 @@
 
   &__linkUp {
     position: absolute;
-    bottom: 15%;
+    bottom: 30%;
     right: 20px;
 
     @include onTablet {
