fixed all from comments

--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -44,6 +44,11 @@
     position: relative;
     width: 100%;
     height: 100%;
+    transition: transform 0.5s;
+
+    &:hover {
+      transform: scale(105%);
+    }
 
     &:not(:first-child) {
       display: none;
