--- a/src/styles/info.scss
+++ b/src/styles/info.scss
@@ -104,6 +104,15 @@
         border-right: 1px solid rgba(26, 90, 76, 0.5);
         padding-right: 65px;
       }
+
+      &-link {
+        text-decoration: none;
+        color: $title-black;
+
+        &:hover {
+          color: rgba(26, 90, 76, 0.5);
+        }
+      }
     }
 
     @include onTablet {
@@ -153,7 +162,7 @@
       grid-column: 1 / 13;
       display: flex;
       justify-content: space-between;
-      margin: 80px 55px 0;
+      margin: 0 50px 35px;
     }
   }
 
