--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -52,6 +52,11 @@
 
   &__image {
     width: 280px;
+    transition: transform 0.5s;
+
+    &:hover {
+      transform: scale(110%);
+    }
 
     @include onTablet {
       width: 700px;
