--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -38,7 +38,7 @@
   &__form {
     width: 100%;
     background-color: #fff;
-
+    padding-left: 32px;
     &-button {
       background-color: #f14a27;
     }
