improved menu, form and current-events

--- a/src/styles/blocks.scss/current-events.scss
+++ b/src/styles/blocks.scss/current-events.scss
@@ -12,6 +12,7 @@
   &__foto {
     display: flex;
     justify-content: center;
+    overflow: hidden;
 
     @include onDesktop {
       grid-column: 1 / 8;
@@ -25,6 +26,11 @@
     margin-bottom: 20px;
     background-size: cover;
     background-position: center;
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(120%);
+    }
   }
 
   &__content {
