--- a/src/styles/blocks.scss/menu.scss
+++ b/src/styles/blocks.scss/menu.scss
@@ -1,7 +1,7 @@
 .menu {
+  height: 100vh;
   box-sizing: border-box;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 1),
-  rgba(255, 255, 255, 0.8));
+  background-color: #1a5a4c;
 
   &__top {
     @include header-top;
@@ -20,7 +20,6 @@
   &__list {
     padding: 20px;
     list-style: none;
-    background-color: #1a5a4c;
 
     @include onDesktop {
       padding: 50px;
@@ -29,7 +28,7 @@
 
   &__link {
     display: inline-block;
-    padding: 10px 0;
+    padding: 20px 0;
     font-weight: 400;
     font-size: 18px;
     text-decoration: none;
