--- a/src/styles/blocks.scss/page.scss
+++ b/src/styles/blocks.scss/page.scss
@@ -1,6 +1,10 @@
 .page {
   scroll-behavior: smooth;
 
+  &__body--with-menu {
+    overflow: hidden;
+  }
+
   &__header {
     margin-bottom: 70px;
 
