--- a/src/styles/blocks.scss/subscription.scss
+++ b/src/styles/blocks.scss/subscription.scss
@@ -52,33 +52,35 @@
 
   &__form {
     display: flex;
-    &-input {
-      box-sizing: border-box;
-      width: 230px;
-      height: 48px;
-      background: #fff;
-      border: none;
 
-      @include onTable {
-        width: 470px;
-        height: 70px;
-        margin-right: 17px;
-      }
+  }
+  &__form-input {
+    box-sizing: border-box;
+    width: 230px;
+    height: 48px;
+    padding: 18px 24px;
+    background: #fff;
+    border: none;
 
-      @include onDesktop {
-        width: 380px;
-        margin-right: 30px;
-      }
+    @include onTable {
+      width: 470px;
+      height: 70px;
+      margin-right: 17px;
+    }
 
-      &::placeholder {
-        padding: 18px 24px;
-        font-family: "Montserrat", sans-serif;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 100%;
-        color: #687480;
-      }
+    @include onDesktop {
+      width: 380px;
+      margin-right: 30px;
+    }
+
+    &::placeholder {
+      padding: 18px 24px;
+      font-family: "Montserrat", sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 100%;
+      color: #687480;
     }
   }
 
@@ -102,4 +104,14 @@
       display: block;
     }
   }
+
+  .warning {
+    border: 2px solid #f39389;
+    border-radius: 2px;
+    padding: 10px;
+    position: absolute;
+    background-color: #df402f;
+    color: #403b3b;
+  }
+
 }
